# DeepLearningFS26

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: lstm.yaml  lstm_no_imbalance.yaml  lstm_smoke.yaml  lstm_smote.yaml  tune_lstm.yaml  tune_lstm_no_imbalance.yaml  tune_lstm_smote.yaml
latex/: main.tex  main_0.1.tex  main_ml.tex  main_pre_condensation.tex  manuell.bib
models/_smoke/: metrics.json  threshold.json
models/archive_471k/lstm_no_imbalance/: threshold.json
models/archive_471k/lstm_smote/: metrics.json  threshold.json
models/lstm/: metrics.json  model.pt  threshold.json  training_log.csv
models/lstm_no_imbalance/: metrics.json  model.pt  threshold.json  training_log.csv
models/lstm_smote/: metrics.json  model.pt  threshold.json  training_log.csv
models/tuning/lstm_lr_dropout_v1/: tuning_results.csv
models/tuning/lstm_no_imbalance_lr_dropout_v1/: tuning_results.csv
models/tuning/lstm_no_imbalance_lr_dropout_v4/: tuning_results.csv
notebooks/: 01_eda.ipynb  02_lstm_results.ipynb
notebooks/legacy/: fraud_detection_notebook.ipynb
scripts/: evaluate.py  generate_plots.py  train_lstm.py  tune_lstm.py
src/fraud/: __init__.py
src/fraud/data/: __init__.py  feature_engineering.py  splits.py
src/fraud/evaluation/: __init__.py  metrics.py  plots.py  stats_tests.py  threshold.py
src/fraud/preprocessing/: __init__.py  feature_engineering.py  loaders.py  preprocessor.py  splits.py
src/fraud/utils/: __init__.py  io.py  seeding.py
tests/: test_feature_engineering.py  test_preprocessor.py  test_sequences.py
(+68 files in other folders)
